force-app/main/default/objects/ReceivableDetail__c/ReceivableDetail__c.object-meta.xml
<CustomObject>
    <label>その他請求明細</label>
    <nameField>
        <displayFormat>RCD-{00000000}</displayFormat>
        <label>その他請求明細#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>