force-app/main/default/objects/ReceivableDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ReceivablesPayablesDetails</relationshipName>
    <type>Lookup</type>
</CustomField>