force-app/main/default/objects/ReceivableDetail__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>項目</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountingDetailItem</valueSetName>
    </valueSet>
</CustomField>