force-app/main/default/objects/ReceivableDetail__c/fields/ItemNameManual__c.field-meta.xml
<CustomField>
    <fullName>ItemNameManual__c</fullName>
    <label>手入力品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>