force-app/main/default/objects/ReceivableDetail__c/fields/TargetDepartment__c.field-meta.xml
<CustomField>
    <fullName>TargetDepartment__c</fullName>
    <label>対象課</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TargetDepartment</valueSetName>
    </valueSet>
</CustomField>