force-app/main/default/objects/ReceivableDetail__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <label>ケース</label>
            </value>
            <value>
                <fullName>Pallet</fullName>
                <label>パレット</label>
            </value>
            <value>
                <fullName>Kou</fullName>
                <label>甲</label>
            </value>
            <value>
                <fullName>Ton</fullName>
                <label>トン</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>