force-app/main/default/objects/ReceivableDetail__c/recordTypes/ReceivableDetailType.recordType-meta.xml
<RecordType>
    <fullName>ReceivableDetailType</fullName>
    <active>true</active>
    <label>売掛明細</label>
</RecordType>