force-app/main/default/objects/ReceivableDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>